CSSで画像を消しておくように修正

--- a/simple_slide_show.css
+++ b/simple_slide_show.css
@@ -1,9 +1,12 @@
 <!--
-#simpleSlideShow {
+.simpleSlideShow img {
+	display : none;
+}
+.simpleSlideShowWrapper {
 	margin : 0 auto;
 	position : relative;
 }
-#simpleSlideShow img {
+.simpleSlideShowWrapper img {
 	position : absolute;
 	left : 0;
 	top : 0;
