アニメーションを fade と slide の2種類に

--- a/jquery.simpleSlideShow/jquery.simpleSlideShow.css
+++ b/jquery.simpleSlideShow/jquery.simpleSlideShow.css
@@ -1,7 +1,10 @@
 @charset "utf-8"
 
-.simpleSlideShow img {
+.fade img {
 	display : none;
+}
+.slide {
+	overflow: hidden;
 }
 .simpleSlideShowWrapper {
 	margin : 0 auto;
