機能追加、バグフィックス
・複数のスライドショーを同時実行したときの不具合を修正
・前後ナビ表示機能を追加
・slide表示のときに前の写真に戻る場合はスライドの方向が逆になるように修正

--- a/jquery.simpleSlideShow/jquery.simpleSlideShow.css
+++ b/jquery.simpleSlideShow/jquery.simpleSlideShow.css
@@ -15,7 +15,8 @@
 	left: 0;
 	top: 0;
 }
-.simpleSlideShowNav ul li {
+.simpleSlideShowNav ul li,
+.simpleSlideShowPrevNextNav ul li {
 	cursor: pointer;
 }
 
