divのスライド対応、YouTube対応、iframe対応は削除

--- a/jquery.simpleSlideShow/jquery.simpleSlideShow.css
+++ b/jquery.simpleSlideShow/jquery.simpleSlideShow.css
@@ -4,8 +4,8 @@
 	overflow: hidden;
 }
 
-.fade img,
-.fade iframe {
+.fade .simpleSlideShowInner img,
+.fade .simpleSlideShowInner div {
 	display: none;
 }
 .slide {
@@ -24,7 +24,7 @@
 	z-index: 0;
 }
 .simpleSlideShowInner img,
-.simpleSlideShowInner iframe {
+.simpleSlideShowInner div {
 	z-index: 1;
 	position : absolute;
 	left: 0;
